# chris_ros_turtlebot2

./: CMakeLists.txt  README.md  chris_ros_turtlebot2.config  package.xml
chris_ros_turtlebot2/: fake_localization.py  model_spawner.py
launch/: astra_bringup.launch.py  astra_pointcloud_bringup.launch.py  fake.launch.py  kinect_bringup.launch.py  turtlebot_bringup.launch.py  turtlebot_gazebo.launch.py  turtlebot_kinect_bringup.launch.py
models/meshes/: model.config
models/meshes/stacks/hexagons/: plate_simple.stl
param/: astra.yaml  camera_info.yaml  hokuyo_serial.yaml  kinect.yaml  kinect_camera_info.yaml  kobuki_node_params.yaml  laser_filters.yaml  usb_camera.yaml
robots/: kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_astra_hokuyo.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_kinect_hokuyo.urdf.xacro  kobuki_hexagons_r200.urdf.xacro
scripts/: fake_localization  model_spawner
urdf/: kobuki.urdf.xacro  kobuki_gazebo.urdf.xacro  kobuki_standalone.urdf.xacro  turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro  turtlebot_properties.urdf.xacro
urdf/sensors/: astra.urdf.xacro  hokuyo_urg04.urdf.xacro  hokuyo_urg04_gazebo.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  xtion_pro.urdf.xacro
urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
